[tool.poetry]
name = "pyfuncify"
version = "0.5.14"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMonad = "^2.4.0"
python-dateutil = "^2.8.2"
jwcrypto = "^1.0"
PyJWT = "^2.1.0"
pino = "^0.6.0"
requests = "^2.26.0"
backoff = "^1.11.1"
simple-memory-cache = "^1.0.0"
pytz = "^2021.3"
mini-lambda = "^2.2.3"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests-mock = "^1.9.3"
time-machine = "^2.3.1"
moto = "^2.2.6"
pynamodb = "^5.1.0"
pytest-mock = "^3.7.0"
pytest-env = "^0.6.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
