[tool.poetry]
name = "pyfuncify"
version = "0.6.3"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
PyMonad = "^2.4.0"
python-dateutil = "^2.8.2"
jwcrypto = "^1.0"
PyJWT = "^2.1.0"
pino = "^0.6.0"
requests = "^2.26.0"
simple-memory-cache = "^1.0.0"
pytz = "^2021.3"
rich = "^13.7.0"
backoff = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"
pytest = "^8.0.1"
pytest-env = "^1.1.3"
time-machine = "^2.13.0"
pdbpp = "^0.10.3"
pynamodb = "^6.0.0"
requests-mock = "^1.11.0"
moto = {extras = ["dynamo"], version = "^5.0.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
